--- a/main.html
+++ b/main.html
@@ -4,10 +4,47 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form ></form>
+	<table class="table table-bordered">
+		<label for="name">Name</label>
+		<input type="text" id="name" required>
+		<br>
+		<label for=email>Email</label>
+		<input type="text" id="name" required>
+		<br>
+		Gender
+		<label>Male</label>
+		<input type="radio" name="gender">
+		<label>female</label>
+		<input type="radio" name="gender">
+		
+		<br>
+		<label for=email for="cars">Car Brands</label>
+		<select id="cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedes</option>
+		</select>
+		<br>
+		<label for="carage">Car Age</label>
+		<input type="number" required id="carage">
+		<br>
+		<label for=dop>Date of Purchase(dop)</label>
+		<input type="date" required id="dop">
+		<br>
+		<label for="password">Password</label>
+		<input type="password" required id="password">
+		<br>
+		<button type="submit">Submit</button>
+		
+		
+    </table>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
