--- a/main.html
+++ b/main.html
@@ -9,22 +9,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form ></form>
-	<table class="table table-bordered">
+	<form method="post">
 		<label for="name">Name</label>
-		<input type="text" id="name" required>
-		<br>
-		<label for=email>Email</label>
-		<input type="text" id="name" required>
-		<br>
-		Gender
-		<label>Male</label>
-		<input type="radio" name="gender">
-		<label>female</label>
-		<input type="radio" name="gender">
+		<input type="Text" id="name" required>
 		
-		<br>
-		<label for=email for="cars">Car Brands</label>
+		<label for=email>Email</label>
+		<input type="text" id="email" required>
+		
+		<label for="gender">Gender</label>
+		<input type="radio" name="gender" value="Male" required>Male
+		<input type="radio" name="gender" value="Female" required>Female
+			
+		<label for="cars">Car Brands</label>
 		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
@@ -41,9 +37,7 @@
 		<input type="password" required id="password">
 		<br>
 		<button type="submit">Submit</button>
-		
-		
-    </table>
+	</form>
 	
     <script type="text/javascript" src="./script.js">
 </script>
